frontends/SynonymSite/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: playground
  name: synonyms-site
  labels:
    name: synonyms-site
    app: synonyms-site
spec:
  selector:
    name: synonyms-site-pod
    app: synonyms-site-app
  ports:
    - port: 80
      targetPort: 80
